--- a/anual/frontend/forms.css
+++ b/anual/frontend/forms.css
@@ -2,6 +2,10 @@
     color:#136C91;
 }
 
+body {
+    background-image: url(imagenes/bg.jpg);
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -23,9 +27,6 @@
     max-width: 700px;
 }
 
-.cuadrado {
-    margin: 10%;
-}
 
 .inputs {
     background-color: rgb(255, 255, 255); 
@@ -55,6 +56,20 @@
     color: #136C91 !important;
 }
 
+.slogan{
+    font-family: "Gowun Batang", serif;
+    color: #ffffff;
+}
+.botonInicio{
+    box-shadow: 0 0 30px 5px #000000a2;
+    color: #003366;
+    background-color:#4A90A4 !important; 
+    border-color:#4A90A4 !important; 
+    border-radius: 15px !important;
+}
+.textoBoton{
+    color: #FFFFFF;
+}
 .botonSU2 {
     background-color:#136C91 !important; 
 }
