--- a/anual/frontend/forms.css
+++ b/anual/frontend/forms.css
@@ -2,6 +2,10 @@
     color:#136C91;
 }
 
+body {
+    background-image: url("imagenes/bg.jpg");
+}
+
 .container {
     display: flex;
     flex-direction: row;
@@ -18,7 +22,7 @@
     background-color: #ffffff;
     border-radius: 0.1cm;
     padding: 4em 2.5em;
-    box-shadow: 0 0 0.5cm #aaaaaa70;
+    box-shadow: 0 0 0.5cm #00000070;
     color: #aaaaaa;
     max-width: 700px;
 }
@@ -40,28 +44,15 @@
     gap : 10px;
 }
 
-.botonSU1 {
+.boton2 {
     background-color:#ffffff !important;
     color: #136C91 !important;
 
 }
 
-.botonLI1 {
-    background-color:#136C91 !important; 
-}
-
-.botonLI2 {
-    background-color:#ffffff !important;
-    color: #136C91 !important;
-}
-
-.botonSU2 {
-    background-color:#136C91 !important; 
-}
-
-.whoareyou {
-    background-color: #136C91;
-    color: #ffffff;
+.boton1 {
+    background-color:#136C91 !important;
+    color: #ffffff; 
 }
 
 .desplegables {
