--- a/anual/frontend/forms.css
+++ b/anual/frontend/forms.css
@@ -1,88 +1,87 @@
 .Title {
-    color:#136C91;
+	color: #136c91;
 }
 
 body {
-    background-image: url("imagenes/bg.jpg");
+	background-image: url("imagenes/bg.jpg");
 }
 
 .container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
 }
 
 .background {
-    background-color: #ffffff !important;
+	background-color: #ffffff !important;
 }
 
 .formulario {
-    background-color: #ffffff;
-    border-radius: 0.1cm;
-    padding: 4em 2.5em;
-    box-shadow: 0 0 0.5cm #00000070;
-    color: #aaaaaa;
-    max-width: 700px;
+	background-color: #ffffff;
+	border-radius: 0.1cm;
+	padding: 4em 2.5em;
+	box-shadow: 0 0 0.5cm #00000070;
+	color: #aaaaaa;
+	max-width: 700px;
 }
 
 .inputs {
-    background-color: rgb(255, 255, 255); 
-    border: 1px solid #aaaaaa;
-    border-radius: 5px;
-    margin-top: 10px;
-    height: 50px;
-    padding: 0px 15px;
+	background-color: rgb(255, 255, 255);
+	border: 1px solid #aaaaaa;
+	border-radius: 5px;
+	margin-top: 10px;
+	height: 50px;
+	padding: 0px 15px;
 }
 
 .gap {
-    gap : 10px;
+	gap: 10px;
 }
 
 .boton2 {
-    background-color:#ffffff !important;
-    color: #136C91 !important;
-
+	background-color: #ffffff !important;
+	color: #136c91 !important;
 }
 
 .boton1 {
-    background-color:#136C91 !important;
-    color: #ffffff; 
+	background-color: #136c91 !important;
+	color: #ffffff;
 }
 
 .botonLI1 {
-    background-color:#136C91 !important; 
+	background-color: #136c91 !important;
 }
 
 .botonLI2 {
-    background-color:#ffffff !important;
-    color: #136C91 !important;
+	background-color: #ffffff !important;
+	color: #136c91 !important;
 }
 
-.slogan{
-    font-family: "Gowun Batang", serif;
-    color: #ffffff;
+.slogan {
+	font-family: "Gowun Batang", serif;
+	color: #ffffff;
 }
-.botonInicio{
-    box-shadow: 0 0 30px 5px #000000a2;
-    background-color:#4A90A4 !important; 
-    border-color:#4A90A4 !important; 
-    border-radius: 15px !important;
+.botonInicio {
+	box-shadow: 0 0 30px 5px #000000a2;
+	background-color: #4a90a4 !important;
+	border-color: #4a90a4 !important;
+	border-radius: 15px !important;
 }
-.textoBoton{
-    color: #add6ff;
+.textoBoton {
+	color: #add6ff;
 }
 .botonSU2 {
-    background-color:#136C91 !important; 
+	background-color: #136c91 !important;
 }
 
 .whoareyou {
-    background-color: #136C91;
-    color: #ffffff;
+	background-color: #136c91;
+	color: #ffffff;
 }
 
 .desplegables {
-    background-color:#ffffff;
-    color: #aaaaaa;
+	background-color: #ffffff;
+	color: #aaaaaa;
 }
