--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -101,17 +101,36 @@ p {
 .btn-primary {
 	border: none;
 	background-color: var(--accent-100);
-	color: var(--white);
+	color: var(--white) !important;
 	border-radius: 8px;
 	font-size: 16px;
 	font-weight: 700;
 	padding: 10px 50px;
 	cursor: pointer;
 	transition: background-color 0.2s;
+	text-align: center;
 }
 
 .btn-primary:hover {
+	text-decoration: none;
 	background-color: var(--accent-100-hover);
+}
+
+.btn-text {
+	border: none;
+	background-color: transparent;
+	color: var(--accent-100);
+	font-size: 16px;
+	font-weight: 700;
+	padding: 10px 50px;
+	cursor: pointer;
+	transition: color 0.2s;
+	text-align: center;
+}
+
+.btn-text:hover {
+	text-decoration: none;
+	color: var(--accent-100-hover);
 }
 
 .my-card {
@@ -121,6 +140,7 @@ p {
 	padding: 30px 40px;
 	overflow: auto;
 }
+
 .my-card-item {
 	cursor: pointer;
 	background-color: transparent;
