--- a/anual/frontend/css/forms.css
+++ b/anual/frontend/css/forms.css
@@ -1,39 +1,43 @@
-.Title {
-	color: #136c91;
-}
-
-body {
-	background-image: url("imagenes/bg.jpg");
-}
-
-.container {
+.form-container {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	width: 100%;
-	justify-content: center;
-	align-items: center;
-}
-
-.background {
-	background-color: #ffffff !important;
-}
-
-.formulario {
-	background-color: #ffffff;
-	border-radius: 0.1cm;
-	padding: 4em 2.5em;
-	box-shadow: 0 0 0.5cm #00000070;
-	color: #aaaaaa;
 	max-width: 700px;
+	margin: auto;
+	padding: 60px 60px;
+	background-color: var(--white);
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	border-radius: 8px;
+	gap: 40px;
 }
 
-.inputs {
-	background-color: rgb(255, 255, 255);
-	border: 1px solid #aaaaaa;
-	border-radius: 5px;
-	margin-top: 10px;
+.form {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 15px;
+}
+
+.form-btns-container {
+	display: flex;
+	gap: 10px;
+	margin-top: 40px;
+}
+
+input {
+	background-color: var(--white);
+	border: 1px solid #e4e4e4;
+	border-radius: 6px;
 	height: 50px;
-	padding: 0px 15px;
+	padding: 10px 20px;
+}
+
+select {
+	padding: 15px;
+	border-radius: 6px;
+	border: none;
+	background-color: var(--accent-100);
+	color: var(--white);
 }
 
 .bloqueDeTexto {
@@ -44,10 +48,6 @@ body {
 	margin-top: 10px;
 	height: 50px;
 	color: #2d3031d3;
-}
-
-.gap {
-	gap: 10px;
 }
 
 .boton2 {
@@ -73,15 +73,18 @@ body {
 	font-family: "Gowun Batang", serif;
 	color: #ffffff;
 }
+
 .botonInicio {
 	box-shadow: 0 0 30px 5px #000000a2;
 	background-color: #4a90a4 !important;
 	border-color: #4a90a4 !important;
 	border-radius: 15px !important;
 }
+
 .textoBoton {
 	color: #add6ff;
 }
+
 .botonSU2 {
 	background-color: #136c91 !important;
 }
@@ -89,9 +92,4 @@ body {
 .whoareyou {
 	background-color: #136c91;
 	color: #ffffff;
-}
-
-.desplegables {
-	background-color: #ffffff;
-	color: #aaaaaa;
 }
