--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -98,6 +98,12 @@ p {
 	background-color: var(--accent-200);
 }
 
+.btn {
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+
 .btn-primary {
 	border: none;
 	background-color: var(--accent-100);
@@ -149,4 +155,22 @@ p {
 
 .my-card-item:hover {
 	background-color: rgb(224, 224, 224);
+}
+
+.modal {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100vw;
+	height: 100vh;
+	position: absolute;
+	background-color: #000000a6;
+	opacity: 0;
+	z-index: -1;
+	transition: opacity 0.2s;
+}
+
+.modal-active {
+	opacity: 1;
+	z-index: 1;
 }
