fix various bugs
Co-authored-by: Sof <mrabeyfischer@frba.utn.edu.ar>
Co-authored-by: Val <vvalmadreamoia@frba.utn.edu.ar>

--- a/anual/frontend/css/forms.css
+++ b/anual/frontend/css/forms.css
@@ -41,6 +41,15 @@ select {
 	color: var(--white);
 }
 
+option {
+	background-color: var(--white);
+	transition: background-color 0.2s;
+}
+
+option:hover {
+	background-color: #dbdbdb;
+}
+
 .gap {
 	gap: 10px;
 }
