--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -170,9 +170,16 @@ p {
 	opacity: 0;
 	z-index: -1;
 	transition: opacity 0.2s;
+	max-height: 100vh;
+	padding: 10px;
 }
 
 .modal-active {
 	opacity: 1;
 	z-index: 1;
+}
+
+.my-modal-content {
+	max-height: 100%;
+	overflow: auto;
 }
