--- a/anual/frontend/css/forms.css
+++ b/anual/frontend/css/forms.css
@@ -24,13 +24,17 @@
 	margin-top: 40px;
 }
 
-input {
+input,
+textarea {
 	background-color: var(--white);
 	border: 1px solid #e4e4e4;
 	border-radius: 6px;
-	height: 50px;
 	padding: 10px 20px;
 	width: 100%;
+}
+
+input {
+	height: 50px;
 }
 
 select {
