Add fridge view reports
Co-authored-by: Sof <mrabeyfischer@frba.utn.edu.ar>
Co-authored-by: Val <vvalmadreamoia@frba.utn.edu.ar>

--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -183,3 +183,26 @@ p {
 	max-height: 100%;
 	overflow: auto;
 }
+
+table {
+	width: 100%;
+}
+
+table,
+tr,
+th,
+td {
+	border-collapse: collapse;
+	border: 1px solid;
+	border-color: darkgray;
+	text-align: center;
+}
+
+th {
+	padding: 5px;
+}
+
+td {
+	font-weight: 400;
+	padding: 10px;
+}
