--- a/anual/frontend/css/forms.css
+++ b/anual/frontend/css/forms.css
@@ -48,6 +48,7 @@ select {
 option {
 	background-color: var(--white);
 	transition: background-color 0.2s;
+	color: var(--text-200);
 }
 
 option:hover {
