--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -23,6 +23,10 @@ body {
 	width: 100vw;
 }
 
+.fullscreen-h {
+	height: 100vh;
+}
+
 h1 {
 	font-size: 60px;
 	font-weight: 700;
@@ -52,6 +56,13 @@ h4 {
 }
 
 h5 {
+	font-size: 25px;
+	font-weight: 700;
+	line-height: 32px;
+	margin: 0;
+}
+
+h6 {
 	font-size: 20px;
 	font-weight: 700;
 	line-height: 32px;
@@ -72,6 +83,10 @@ p {
 	font-weight: 400;
 }
 
+.normal {
+	font-weight: 400 !important;
+}
+
 .bold {
 	font-weight: 700;
 }
@@ -90,6 +105,10 @@ p {
 
 .accent-200 {
 	color: var(--accent-200);
+}
+
+.white {
+	color: var(--white);
 }
 
 .bg-accent-100 {
