--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -4,9 +4,13 @@ html {
 	--bg: #f9fbff;
 	--accent-100: #136c91;
 	--accent-100-hover: #187ba5;
-	--accent-200: #788ec8;
+	--accent-200: #b3e1f8;
+	--accent-300: #cae8f6;
+	--accent-400: #dcf1fc;
 	--text-100: #2e2836;
 	--text-200: #726a7d;
+	--text-contrast-100: #fff;
+	--text-contrast-200: #f1f1f1;
 	--paragraph: 14px;
 	--small: 12px;
 }
@@ -99,12 +103,24 @@ p {
 	color: var(--text-200);
 }
 
+.text-contrast-100 {
+	color: var(--text-contrast-100);
+}
+
+.text-contrast-200 {
+	color: var(--text-contrast-200);
+}
+
 .accent-100 {
 	color: var(--accent-100);
 }
 
 .accent-200 {
 	color: var(--accent-200);
+}
+
+.accent-300 {
+	color: var(--accent-300);
 }
 
 .white {
@@ -117,6 +133,18 @@ p {
 
 .bg-accent-200 {
 	background-color: var(--accent-200);
+}
+
+.bg-accent-300 {
+	background-color: var(--accent-300);
+}
+
+.rounded {
+	border-radius: 8px !important;
+}
+
+.rounded-x2 {
+	border-radius: 16px !important;
 }
 
 .btn {
