--- a/anual/frontend/css/landing.css
+++ b/anual/frontend/css/landing.css
@@ -15,25 +15,40 @@ body {
 section {
 	width: 100%;
 	max-width: 1600px;
-	margin-block: 30px;
-	margin-inline: 20px;
+	margin-inline: 50px;
+}
+
+.section-space {
+	margin-block: 65px;
+}
+
+h1 {
+	font-family: "Montserrat", sans-serif !important;
+}
+
+h5 {
+	line-height: 40px;
+}
+
+.header-line {
+	margin-top: 10px;
+	margin-bottom: 50px;
+	width: 450px;
+	height: 12px;
+	border-radius: 8px;
+	background-color: var(--accent-100);
+}
+
+.line {
+	width: 100%;
+	height: 12px;
+	border-radius: 8px;
+	background-color: var(--accent-100);
 }
 
 nav {
 	margin-top: 10px;
 }
-
-/* h1,
-h2,
-h3,
-h4,
-h5 {
-	font-family: "Montserrat", sans-serif !important;
-}
-
-p {
-	font-family: "Inter" !important;
-} */
 
 .nav-link {
 	font-weight: 400;
@@ -55,13 +70,14 @@ p {
 	left: 0;
 }
 
-.hero-title {
+.font-128 {
 	font-size: 128px;
 	line-height: 182px;
 }
 
-.hero-desc {
-	color: var(--hero-desc);
+.font-100 {
+	font-size: 100px;
+	line-height: 182px;
 }
 
 .hero-btn-left,
