--- a/anual/frontend/css/landing.css
+++ b/anual/frontend/css/landing.css
@@ -30,17 +30,27 @@ h5 {
 	line-height: 40px;
 }
 
-.header-line {
-	margin-top: 10px;
-	margin-bottom: 50px;
-	width: 450px;
+.font-128 {
+	font-size: 128px;
+	line-height: 182px;
+}
+
+.font-100 {
+	font-size: 100px;
+	line-height: 182px;
+}
+
+.line {
+	width: 100%;
 	height: 12px;
 	border-radius: 8px;
 	background-color: var(--accent-100);
 }
 
-.line {
-	width: 100%;
+.header-line {
+	margin-top: 10px;
+	margin-bottom: 50px;
+	width: 450px;
 	height: 12px;
 	border-radius: 8px;
 	background-color: var(--accent-100);
@@ -70,16 +80,6 @@ nav {
 	left: 0;
 }
 
-.font-128 {
-	font-size: 128px;
-	line-height: 182px;
-}
-
-.font-100 {
-	font-size: 100px;
-	line-height: 182px;
-}
-
 .hero-btn-left,
 .hero-btn-right {
 	width: 500px;
@@ -88,6 +88,7 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	font-size: 20px;
 }
 
 .hero-btn-left {
@@ -104,4 +105,18 @@ nav {
 	left: 1120px;
 	z-index: -1;
 	position: absolute;
+}
+
+.cta-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--accent-200);
+	font-size: 20px;
+	width: 300px;
+	height: 90px;
+}
+
+.cta-btn:hover {
+	background-color: var(--accent-300);
 }
