--- a/anual/frontend/css/base.css
+++ b/anual/frontend/css/base.css
@@ -8,7 +8,7 @@ html {
 	--accent-300: #cae8f6;
 	--accent-400: #dcf1fc;
 	--text-100: #2e2836;
-	--text-200: #726a7d;
+	--text-200: #72a6a7d;
 	--text-contrast-100: #fff;
 	--text-contrast-200: #f1f1f1;
 	--paragraph: 14px;
