feat: update link in html to point to server files

--- a/anual/src/main/resources/templates/landing.html
+++ b/anual/src/main/resources/templates/landing.html
@@ -11,8 +11,8 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../css/base.css" />
-		<link rel="stylesheet" href="../css/landing.css" />
+		<link rel="stylesheet" href="/public/css/base.css" />
+		<link rel="stylesheet" href="/public/css/landing.css" />
 	</head>
 
 	<body>
@@ -23,7 +23,7 @@
 					<nav style="margin-bottom: 20px">
 						<div class="d-flex w-100 align-items-center justify-content-between">
 							<div class="d-flex align-items-center" style="gap: 20px">
-								<img src="../assets/logo.png" alt="" height="60" width="60" />
+								<img src="/public/assets/logo.png" alt="" height="60" width="60" />
 								<h5 class="accent-100 normal">FridgeBridge</h5>
 							</div>
 							<div class="d-flex align-items-center" style="gap: 40px">
@@ -54,19 +54,15 @@
 								lobortis lorem ac malesuada ultricies. In finibus varius ornare.
 							</h5>
 							<div class="d-flex align-items-center" style="gap: 80px">
-								<a
-									href="./registration/login.html"
-									class="btn-primary hero-btn-left"
+								<a href="/register/login" class="btn-primary hero-btn-left"
 									>Get food</a
 								>
-								<a
-									href="./registration/signup.html"
-									class="btn-primary hero-btn-right"
+								<a href="/register/signup" class="btn-primary hero-btn-right"
 									>Be a collaborator</a
 								>
 							</div>
 						</div>
-						<img src="../assets/landing/hero.png" alt="" class="hero-img" />
+						<img src="/public/assets/landing/hero.png" alt="" class="hero-img" />
 					</div>
 				</section>
 			</div>
@@ -109,7 +105,7 @@
 						malesuada ultricies. In finibus varius ornare.
 					</h5>
 					<div class="w-100 bg-accent-300 rounded" style="padding: 20px">
-						<img src="../assets/landing/campaign.png" alt="" width="100%" />
+						<img src="/public/assets/landing/campaign.png" alt="" width="100%" />
 					</div>
 				</section>
 			</div>
@@ -132,7 +128,7 @@
 						<div class="header-line"></div>
 
 						<div class="d-flex" style="gap: 40px">
-							<img src="../assets/landing/about-us.png" alt="" />
+							<img src="/public/assets/landing/about-us.png" alt="" />
 							<h5 class="normal">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
 								accumsan suscipit hendrerit. Nullam et auctor magna. Curabitur
@@ -165,9 +161,7 @@
 								>save <span class="accent-100">lives</span></span
 							>
 						</h1>
-						<a href="./registration/signup.html" class="btn-primary cta-btn"
-							>Save a life</a
-						>
+						<a href="/register/signup" class="btn-primary cta-btn">Save a life</a>
 					</div>
 				</section>
 			</div>
@@ -183,7 +177,7 @@
 								class="d-flex align-items-center"
 								style="gap: 20px; margin-bottom: 30px"
 							>
-								<img src="../assets/logo.png" alt="" height="60" width="60" />
+								<img src="/public/assets/logo.png" alt="" height="60" width="60" />
 								<h5 class="accent-100 normal">FridgeBridge</h5>
 							</div>
 							<p class="text-100">
