--- a/anual/src/main/resources/templates/dash/home.html
+++ b/anual/src/main/resources/templates/dash/home.html
@@ -10,15 +10,21 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<link rel="stylesheet" href="../../css/home.css" />
-		<link rel="stylesheet" href="../../css/forms.css" />
-		<link rel="stylesheet" href="../../css/base.css" />
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-		integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-		crossorigin=""/> <!-- Make sure you put this AFTER Leaflet's CSS -->
-	 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-		 integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-		 crossorigin=""></script>
+		<link rel="stylesheet" href="/public/css/home.css" />
+		<link rel="stylesheet" href="/public/css/forms.css" />
+		<link rel="stylesheet" href="/public/css/base.css" />
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+			integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+			crossorigin=""
+		/>
+		<!-- Make sure you put this AFTER Leaflet's CSS -->
+		<script
+			src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+			integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+			crossorigin=""
+		></script>
 	</head>
 
 	<body>
@@ -254,12 +260,11 @@
 			class="my-card d-flex flex-column justify-content-center overflow-auto"
 			style="width: 650px; max-height: 100%"
 		>
-
 			<p class="small accent-100 align-self-end btn" id="modal-close">X</p>
 			<div class="my-modal-content" id="modal-content"></div>
 		</div>
 	</div>
 
-	<script src="../../js/forms.js"></script>
-	<script src="../../js/modal.js"></script>
+	<script src="/public/js/forms.js"></script>
+	<script src="/public/js/modal.js"></script>
 </html>
