feat: user controllers

--- a/anual/src/main/resources/templates/register/login.html
+++ b/anual/src/main/resources/templates/register/login.html
@@ -42,7 +42,7 @@
 				/>
 
 				<div class="form-btns-container">
-					<a href="/register/signup.html" class="btn-text w-100">Sign up</a>
+					<a href="/register/signup" class="btn-text w-100">Sign up</a>
 					<button type="submit" class="btn-primary w-100">Log in</button>
 				</div>
 			</form>
