--- a/anual/src/main/resources/templates/register/signup.html
+++ b/anual/src/main/resources/templates/register/signup.html
@@ -21,7 +21,7 @@
 				<h5 class="accent-100 mb-2">Sign up</h5>
 				<p>Create your account and start eating with us!</p>
 			</div>
-			<form method="POST" action="/user/signup" class="form">
+			<form method="POST" action="/user/" class="form">
 				<div class="form-btns-container w-100">
 					<a class="btn-primary w-100" href="/register/signupLE"
 						>Sign up as Legal Entity</a
