--- a/anual/src/main/resources/templates/register/signupIND.html
+++ b/anual/src/main/resources/templates/register/signupIND.html
@@ -21,7 +21,7 @@
 				<h5 class="accent-100 mb-2">Sign up</h5>
 				<p>Create your account and join us!</p>
 			</div>
-			<form method="POST" action="/user/signupIND" class="form">
+			<form method="POST" action="/user/individual" class="form">
 				<div class="d-flex justify-content-between w-100" style="gap: 10px">
 					<input
 						type="text"
