feat: Donations are retrieved from db

--- a/anual/src/main/resources/templates/dash/home.html
+++ b/anual/src/main/resources/templates/dash/home.html
@@ -98,7 +98,7 @@
 										<h4>${donation.emoji}</h4>
 										<div>
 											<h6>${donation.type}</h6>
-											<p>${donation.desc}"</p>
+											<p>${donation.desc}</p>
 										</div>
 									</div>
 								</#list>
