--- a/anual/src/main/resources/templates/dash/home.html
+++ b/anual/src/main/resources/templates/dash/home.html
@@ -87,12 +87,6 @@
 								<#list donations as donation> 
 									<div
 										class="d-flex align-items-center my-card-item"
-										id="fridge"
-										data-fridge-name=${donation.fridge.name}
-										data-fridge-temp=${donation.fridge.temp}
-										data-fridge-reserved=${donation.fridge.reserved}
-										data-fridge-state=${donation.fridge.state}
-										data-fridge-meals=${donation.fridge.meals}
 										style="gap: 30px"
 									>
 										<h4>${donation.emoji}</h4>
@@ -160,12 +154,20 @@
 								<p class="points">${user.points}</p>
 							</div>
 							<#list rewards as reward> 
-								<div class="d-flex align-items-center my-card-item" style="gap: 30px">
-									<h4>${reward.emoji}</h4>
+								<div
+									class="d-flex align-items-center justify-content-between my-card-item"
+									style="gap: 30px"
+									id="reward"
+									data-reward-neededpoints=${reward.neededPoints}
+									>
+									<div class="d-flex align-items-center my-card-item" style="gap: 30px">
+										<img src="${reward.imageUrl}" alt="${reward.name}" style="width: 50px; height: 50px; object-fit: cover;">
 										<div>
-											<h6>${reward.category}</h6>
+											<h6>${reward.name}</h6>
 											<p>${reward.description}</p>
 										</div>
+									</div>
+									<button class="btn-primary" id="claim-reward-btn">Redeem it for ${reward.neededPoints} points</button>
 								</div>
 							</#list>
 						</div>
