feat: meal donation integration

--- a/anual/src/main/resources/templates/dash/home.html
+++ b/anual/src/main/resources/templates/dash/home.html
@@ -163,7 +163,7 @@
 								<div class="d-flex align-items-center my-card-item" style="gap: 30px">
 									<h4>${reward.emoji}</h4>
 										<div>
-											<h6>${reward.category}</h6>
+											<h6>${reward.name}</h6>
 											<p>${reward.description}</p>
 										</div>
 								</div>
