feat: only show allowed contributions

--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -69,7 +69,8 @@
 								</#list>
 							</div>
 						</div>
-						<button class="btn-primary" id="contribute-btn">Contribute</button>
+						<button class="btn-primary" id="contribute-btn"  user-type="IND" >Contribute</button>
+
 					</div>
 				</div>
 
