--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -69,7 +69,7 @@
 								</#list>
 							</div>
 						</div>
-						<button class="btn-primary" id="contribute-btn">Contribute</button>
+						<button class="btn-primary" id="contribute-btn" user-type="LE">Contribute</button>
 					</div>
 				</div>
 
