--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -113,6 +113,7 @@
 										style="gap: 30px"
 										id="fridge"
 										data-fridge-name=${fridge.name}
+										data-fridge-id=${fridge.id}
 										data-fridge-temp=${fridge.temp}
 										data-fridge-reserved=${fridge.reserved}
 										data-fridge-state=${fridge.state}
