--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -125,12 +125,12 @@
 											<h6>${fridge.name} fridge</h6>
 											<div class="d-flex w-100 justify-content-between">
 												<p>${fridge.food_status_desc}</p>
-												<#if fridge.meal_urgency == "High">
-													<p class="small bold text-danger">${fridge.meal_urgency} urgency</p>
-												<#elseif fridge.meal_urgency == "Medium">
-													<p class="small bold text-warning">${fridge.meal_urgency} urgency</p>
+												<#if fridge.meal_urgency == "0 Incidents">
+													<p class="small bold text-success">${fridge.meal_urgency}</p>
+												<#elseif fridge.meal_urgency == "1 Incident">
+													<p class="small bold text-warning">${fridge.meal_urgency}</p>
 												<#else>
-													<p class="small bold text-success">${fridge.meal_urgency} urgency</p>
+													<p class="small bold text-danger">${fridge.meal_urgency}</p>
 												</#if>
 											</div>
 										</div>
