feat: add logout

--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -47,6 +47,7 @@
 						</div>
 					</div>
 					<button class="btn-primary" id="contribute-btn" user-type="LE">Contribute</button>
+					<button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn">Log Out</button>
 				</div>
 			</div>
 
