--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -70,7 +70,8 @@
 							</div>
 						</div>
 						<button class="btn-primary" id="contribute-btn"  user-type="IND" >Contribute</button>
-
+					<button onclick="deleteCookieAndRefresh()" type="button" class="btn btn-light" id="logout-btn">Log Out</button>
+						
 					</div>
 				</div>
 
