--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -33,6 +33,11 @@
 				class="d-flex flex-column w-100"
 				style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px"
 			>
+				<#if error??>
+					<div class="error-container">
+						<p style="color: red">${error}</p>
+					</div>
+				</#if>
 				<div
 					class="d-flex flex-row justify-content-between align-items-center w-100"
 					style="margin-bottom: 20px"
@@ -225,4 +230,5 @@
 
 	<script src="/public/js/forms.js"></script>
 	<script src="/public/js/modal.js"></script>
+	<script src="/public/js/error.js"></script>
 </html>
