--- a/anual/src/main/resources/templates/dash/homeLE.html
+++ b/anual/src/main/resources/templates/dash/homeLE.html
@@ -20,6 +20,11 @@
 <body>
 	<div class="fullscreen overflow-auto" style="max-height: 100vh">
 		<div class="d-flex flex-column w-100" style="max-width: 1280px; margin: auto; gap: 30px; padding: 50px">
+			<#if error??>
+				<div class="error-container">
+					<p style="color: red">${error}</p>
+				</div>
+			</#if>
 			<div class="d-flex flex-row justify-content-between align-items-center w-100" style="margin-bottom: 20px">
 				<div class="d-flex flex-column gap-3">
 					<h4>Hello ${user.name} 👋</h4>
